# hyperpolarizability.com

./: .gitignore  404.html  CNAME  README.md  about.html  archive.html  contact.html  hp.cabal  index.html  site.hs  test.html  test.md
bib/: bibliography.bib  physicalchemistry.bib
css/: default.css
js/: code-copy.js  mathjax-config.js  print.js
posts/: 2025-01-20-chemical-kinetics.html  2025-01-22-discrete-math.html  2025-01-22-discrete-math.markdown  2025-01-22-discrete-math2.html  2025-01-22-discrete-math2.markdown  2025-01-22-discrete-math3.html  2025-01-22-discrete-math3.markdown  2025-01-22-discrete-math4.html  2025-01-22-discrete-math4.markdown  2025-01-22-discrete-math5.html  2025-01-22-discrete-math5.markdown  2025-01-22-discrete-math6.html  2025-01-22-discrete-math6.markdown  2025-01-22-discrete-math7.html  2025-01-22-discrete-math7.markdown  2025-01-25-radiochemistry.html  2026-01-16-quantum-tunneling-psi4-results.html  2026-01-16-quantum-tunneling-psi4-results.md  2026-01-16-quantum-tunneling-workflow.html  2026-01-16-quantum-tunneling-workflow.md  Calculating-Atomic-Polarizabilities-of-Group-4A-Elements.html  Calculating-Atomic-Polarizabilities-of-Group-4A-Elements.markdown  Comp-Tools_for_td-dft.html  Comp-Tools_for_td-dft.md  Comparative-Analysis-of-TD-DFT-Functionals-for-Formaldehyde-Excited-States.html  Determination-of-SI-Units-for-Magnetic-interaction.html  Maths-Framework-and-Basis-Sets.html  Polarizability-Trends-in-Carbon-Chalcogen-Diatomic-Molecules-A-Computational-Study.html  QC-Maths-Framework-for-Hyperpolarizability.html  cors-proxy.html  (+12 more)
(+6 files in other folders)
