name:               hp
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.7 && <5,
                    hakyll >=4.16.5.0 && <4.18,
                    pandoc >=3.6.2 && <3.7,
                    containers >=0.6 && <0.7
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
